[package]
name = "macLogger"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5.15"
interprocess = "2.2.3"
lazy_static = "1.5.0"
libc = "0.2.174"
nix = { version = "0.26", features = ["fs"] }
opentelemetry = "0.30.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.141"
signal-hook = "0.3.18"
structopt = "0.3.26"
tempdir = "0.3.7"
